[package]
name = "nano-http"
version = "0.1.1"
description = "Minimalistic command-line HTTP server"
license="MIT"
repository="https://github.com/pedrolcn/nano-http"
readme="README.md"
authors = ["Pedro Nascimento <pedrolcn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
tide = "0.11.0"
async-std = { version = "1.6.2", features = ["attributes"] }
femme = "2.1.0"