[package]
name = "nano-http"
version = "0.1.4"
description = "Minimalistic command-line HTTP server"
license="MIT"
repository="https://github.com/pedrolcn/nano-http"
readme="README.md"
authors = ["Pedro Nascimento <pedrolcn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
actix-web = "2.0.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
actix-rt = "1.1.1"